--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prashiskshan - NEP-Compliant Internship Management Platform</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>VIPBuddy - NEP-Compliant Internship Management Platform</title>
     <meta name="description" content="Streamline internships for students with NEP-compliant credit assignment, skill development, and industry collaboration. Verified internships, pre-internship preparation, and real-time monitoring." />
-    <meta name="author" content="Prashiskshan" />
+    <meta name="author" content="VIPBuddy" />
+    
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#8B5CF6" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="VIPBuddy" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Prashiskshan - NEP-Compliant Internship Management" />
+    <meta property="og:title" content="VIPBuddy - NEP-Compliant Internship Management" />
     <meta property="og:description" content="Centralized platform for verified internships, skill development, and NEP credit integration for Indian colleges." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
